Fixed bug #50240 (pdo_mysql.default_socket in php.ini shouldn't used if it is empty).